objects/Roleplayer__c.object
<CustomObject>
    <fields>
        <fullName>Avatar__c</fullName>
        <label>Avatar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Been_playing_since__c</fullName>
        <label>Been playing since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charisma__c</fullName>
        <label>Charisma</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constitution__c</fullName>
        <label>Constitution</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dexterity__c</fullName>
        <label>Dexterity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intelligence__c</fullName>
        <label>Intelligence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Noteables__c</fullName>
        <label>Noteables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Life_Name__c</fullName>
        <label>Real Life Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wisdom__c</fullName>
        <label>Wisdom</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience_Label__c</fullName>
        <formula>TEXT(Years_of_Experience__c)  &amp; &apos; years of experience&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years of Experience Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <formula>YEAR(TODAY()) -
 YEAR(Been_playing_since__c)</formula>
        <label>Years of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Roleplayer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Real_Life_Name__c</columns>
        <columns>NAME</columns>
        <columns>Race__c</columns>
        <columns>Class__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Roleplayer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roleplayers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>